kubernetes/back/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: proyecto
    name: deploy-back-proyecto-sopes2
    namespace: proyecto
spec:
    replicas: 3
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 25%
    selector:
        matchLabels:
            app: proyecto
    template:
        metadata:
            labels:
                app: proyecto
        spec:
            containers:
                - image:
                  name: proyecto-grupo16-so2-backend 
                  ports:
                      - containerPort: 3100
            restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: proyecto
    name: service-back-proyecto-sopes2
    namespace: proyecto
spec:
    ports:
        - port: 3100
          protocol: TCP
          targetPort: 3100
    selector:
        app: proyecto
