kubernetes/back/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    annotations:
        kubernetes.io/ingress.class: nginx
    labels:
        app: proyecto
    name: backend-ingress
    namespace: proyecto
spec:
    rules:
        - host: nginx.back.example.com
          http:
              paths:
                  - backend:
                        serviceName: service-back-proyecto-sopes2
                        servicePort: 3100
                    path: /
